修正了排序数组的bug

--- a/src/assets/reset.scss
+++ b/src/assets/reset.scss
@@ -13,6 +13,7 @@ a{
 }
 input,button{
   font:inherit;
+  border-color: transparent;
 }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
