--- a/src/assets/reset.scss
+++ b/src/assets/reset.scss
@@ -15,6 +15,11 @@ input,button{
   font:inherit;
   border-color: transparent;
 }
+html{
+  background: #EDEDED;
+}
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -28,6 +33,7 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
+
   margin: 0;
   padding: 0;
   border: 0;
